--- a/templates/index.html
+++ b/templates/index.html
@@ -1,139 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Document</title>
-	<link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
-	<script src="https://cdn.tailwindcss.com"></script>
-</head>
-<div class="min-h-full">
-	<nav class="bg-white">
-	  <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8">
-		<div class="flex h-16 items-center justify-between">
-		  <div class="flex flex-col items-center">
-			<div class="flex-shrink-0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}" />
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" />
+    <script src="https://cdn.tailwindcss.com"></script>
+    <script src="https://cdn.plot.ly/plotly-2.27.0.min.js"></script>
+  </head>
+  <body>
+    <div class="min-h-full">
+      <nav class="bg-zinc-700">
+        <div class="mx-auto max-w-7xl md:px-6 lg:px-8">
+          <div class="flex flex-col md:flex-row items-center justify-between">
+			<div class="flex justify-end md:hidden w-full py-4">
+				<button 
+					type="button" 
+					class="inline-flex items-center justify-center mr-4 rounded-md bg-gray-800 p-2 text-gray-400 hover:bg-gray-700 hover:text-white focus:outline-none focus:ring-2 focus:ring-zinc-400"
+					onclick="toggleMenu()"
+				>
+				  <i class="fa-solid fa-bars"></i>
+				</button>
 			</div>
-			<div class="hidden md:block">
-			  <div class="ml-0 flex items-baseline space-x-4">
-				<!-- Current: "bg-gray-900 text-white", Default: "text-gray-300 hover:bg-gray-700 hover:text-white" -->
-				<a href="#" class="bg-gray-500 text-black rounded-md px-3 py-2 text-sm font-medium" aria-current="page">氣溫</a>
-				<a href="#" class="text-black hover:bg-gray-400 hover:text-white rounded-md px-3 py-2 text-sm font-medium">雨量</a>
-				<a href="#" class="text-black hover:bg-gray-400 hover:text-white rounded-md px-3 py-2 text-sm font-medium">風速</a>
-				<!--a href="#" class="text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-3 py-2 text-sm font-medium">Calendar</a>
-				<a href="#" class="text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-3 py-2 text-sm font-medium">Reports</a-->
-			  </div>
+			<div id="mobile-menu" class="md:block flex flex-col items-center justify-center md:flex-row md:justify-start  md:space-x-4 pb-4 md:py-4 w-full">
+				<a href="#" class="bg-zinc-500 text-white text-center md:rounded-md w-full md:w-fit md:px-3 py-2 text-md font-medium focus:ring-2 focus:ring-slate-300">氣溫</a>
+				<a href="#" class="text-white text-center hover:bg-zinc-400 md:rounded-md w-full md:w-fit md:px-3 py-2 text-md font-medium focus:ring-2 focus:ring-slate-300">雨量</a>
+				<a href="#" class="text-white text-center hover:bg-zinc-400 md:rounded-md w-full md:w-fit md:px-3 py-2 text-md font-medium focus:ring-2 focus:ring-slate-300">風速</a>
 			</div>
-		  </div>
-		  <!--div class="hidden md:block">
-			<div class="ml-4 flex items-center md:ml-6">
-			  <button type="button" class="relative rounded-full bg-gray-800 p-1 text-gray-400 hover:text-white focus:outline-none focus:ring-2 focus:ring-white focus:ring-offset-2 focus:ring-offset-gray-800">
-				<span class="absolute -inset-1.5"></span>
-				<span class="sr-only">View notifications</span>
-				<svg class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true">
-				  <path stroke-linecap="round" stroke-linejoin="round" d="M14.857 17.082a23.848 23.848 0 005.454-1.31A8.967 8.967 0 0118 9.75v-.7V9A6 6 0 006 9v.75a8.967 8.967 0 01-2.312 6.022c1.733.64 3.56 1.085 5.455 1.31m5.714 0a24.255 24.255 0 01-5.714 0m5.714 0a3 3 0 11-5.714 0" />
-				</svg>
-			  </button-->
-  
-			  <!-- Profile dropdown -->
-			  <div class="relative ml-3">
-				<!--div>
-				  <button type="button" class="relative flex max-w-xs items-center rounded-full bg-gray-800 text-sm focus:outline-none focus:ring-2 focus:ring-white focus:ring-offset-2 focus:ring-offset-gray-800" id="user-menu-button" aria-expanded="false" aria-haspopup="true">
-					<span class="absolute -inset-1.5"></span>
-					<span class="sr-only">Open user menu</span>
-					<img class="h-8 w-8 rounded-full" src="https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80" alt="">
-				  </button>
-				</div-->
-  
-				<!--
-				  Dropdown menu, show/hide based on menu state.
-  
-				  Entering: "transition ease-out duration-100"
-					From: "transform opacity-0 scale-95"
-					To: "transform opacity-100 scale-100"
-				  Leaving: "transition ease-in duration-75"
-					From: "transform opacity-100 scale-100"
-					To: "transform opacity-0 scale-95"
-				-->
-				<!--div class="absolute right-0 z-10 mt-2 w-48 origin-top-right rounded-md bg-white py-1 shadow-lg ring-1 ring-black ring-opacity-5 focus:outline-none" role="menu" aria-orientation="vertical" aria-labelledby="user-menu-button" tabindex="-1"-->
-				  <!-- Active: "bg-gray-100", Not Active: "" -->
-				  <!--a href="#" class="block px-4 py-2 text-sm text-gray-700" role="menuitem" tabindex="-1" id="user-menu-item-0">Your Profile</a>
-				  <a href="#" class="block px-4 py-2 text-sm text-gray-700" role="menuitem" tabindex="-1" id="user-menu-item-1">Settings</a>
-				  <a href="#" class="block px-4 py-2 text-sm text-gray-700" role="menuitem" tabindex="-1" id="user-menu-item-2">Sign out</a>
-				</div-->
-			  </div>
-			</div>
-		  </div>
-		  <div class="-mr-2 flex md:hidden">
-			<!-- Mobile menu button -->
-			<!--
-			<button type="button" class="relative inline-flex items-center justify-center rounded-md bg-gray-800 p-2 text-gray-400 hover:bg-gray-700 hover:text-white focus:outline-none focus:ring-2 focus:ring-white focus:ring-offset-2 focus:ring-offset-gray-800" aria-controls="mobile-menu" aria-expanded="false">
-			  <span class="absolute -inset-0.5"></span>
-			  <span class="sr-only">Open main menu</span>
-			  
-			  <svg class="block h-6 w-6" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true">
-				<path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5" />
-			  </svg>
-			  
-			  <svg class="hidden h-6 w-6" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true">
-				<path stroke-linecap="round" stroke-linejoin="round" d="M6 18L18 6M6 6l12 12" />
-			  </svg>
-			</button>
-			-->
-		  </div>
-		</div>
-	  </div>
-  
-	  <!-- Mobile menu, show/hide based on menu state. -->
-	  <div class="md:hidden" id="mobile-menu">
-		<div class="space-y-1 px-2 pb-3 pt-2 sm:px-3">
-		  <!-- Current: "bg-gray-900 text-white", Default: "text-gray-300 hover:bg-gray-700 hover:text-white" -->
-		  <a href="#" class="bg-gray-500 text-black block rounded-md px-3 py-2 text-base font-medium" aria-current="page">雨量</a>
-		  <a href="#" class="text-black hover:bg-gray-400 hover:text-white block rounded-md px-3 py-2 text-base font-medium">氣溫</a>
-		  <a href="#" class="text-black hover:bg-gray-400 hover:text-white block rounded-md px-3 py-2 text-base font-medium">風速</a>
-		  <!--a href="#" class="text-gray-300 hover:bg-gray-700 hover:text-white block rounded-md px-3 py-2 text-base font-medium">Calendar</a>
-		  <a href="#" class="text-gray-300 hover:bg-gray-700 hover:text-white block rounded-md px-3 py-2 text-base font-medium">Reports</a-->
-		</div>
-		<div class="border-t border-gray-700 pb-3 pt-4">
-		  <div class="flex items-center px-5">
-			<div class="flex-shrink-0">
-			  <img class="h-10 w-10 rounded-full" src="https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80" alt="">
-			</div>
-			<div class="ml-3">
-			  <div class="text-base font-medium leading-none text-white">Tom Cook</div>
-			  <div class="text-sm font-medium leading-none text-gray-400">tom@example.com</div>
-			</div>
-			<button type="button" class="relative ml-auto flex-shrink-0 rounded-full bg-gray-800 p-1 text-gray-400 hover:text-white focus:outline-none focus:ring-2 focus:ring-white focus:ring-offset-2 focus:ring-offset-gray-800">
-			  <span class="absolute -inset-1.5"></span>
-			  <span class="sr-only">View notifications</span>
-			  <svg class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true">
-				<path stroke-linecap="round" stroke-linejoin="round" d="M14.857 17.082a23.848 23.848 0 005.454-1.31A8.967 8.967 0 0118 9.75v-.7V9A6 6 0 006 9v.75a8.967 8.967 0 01-2.312 6.022c1.733.64 3.56 1.085 5.455 1.31m5.714 0a24.255 24.255 0 01-5.714 0m5.714 0a3 3 0 11-5.714 0" />
-			  </svg>
-			</button>
-		  </div>
-		  <div class="mt-3 space-y-1 px-2">
-			<a href="#" class="block rounded-md px-3 py-2 text-base font-medium text-gray-400 hover:bg-gray-700 hover:text-white">Your Profile</a>
-			<a href="#" class="block rounded-md px-3 py-2 text-base font-medium text-gray-400 hover:bg-gray-700 hover:text-white">Settings</a>
-			<a href="#" class="block rounded-md px-3 py-2 text-base font-medium text-gray-400 hover:bg-gray-700 hover:text-white">Sign out</a>
-		  </div>
-		</div>
-	  </div>
-	</nav>
-<!--
-	<header class="bg-gray-800">
-	  <div class="mx-auto max-w-7xl px-4 py-6 sm:px-6 lg:px-8">
-		<h1 class="text-3xl font-bold tracking-tight text-gray-900">Dashboard</h1>
-	  </div>
-	</header>
--->
-	<main>
-	  <div class="mx-auto max-w-7xl py-6 sm:px-6 lg:px-8">
-		<!-- Your content -->
-	  </div>
-	</main>
-  </div>
-
-	
+          </div>
+        </div>
+      </nav>
+      <main>
+        <div class="mx-auto max-w-7xl py-6 sm:px-6 lg:px-8">
+        </div>
+      </main>
+    </div>
+	<script>
+		const toggleMenu = () => {
+			const menu = document.getElementById('mobile-menu')
+			menu.classList.toggle('hidden')
+		}
+	</script>
 	<script src="{{ url_for('static', filename='js/main.js') }}"></script>
-</body>
+  </body>
 </html>
