--- a/templates/index.html
+++ b/templates/index.html
@@ -33,6 +33,7 @@
       </nav>
       <main>
         <div class="mx-auto max-w-7xl py-6 sm:px-6 lg:px-8">
+          <div id="myDiv"></div>
         </div>
       </main>
     </div>
@@ -41,6 +42,20 @@
 			const menu = document.getElementById('mobile-menu')
 			menu.classList.toggle('hidden')
 		}
+    var data = [{
+      type: 'choroplethmapbox', locations: [], z: [],
+      geojson: "{{ url_for('static', filename='counties.json') }}"
+    }];
+
+    var layout = {
+        mapbox: {
+            style: 'white-bg',
+            zoom: 3.5
+        },   
+        width: 600, 
+        height:400
+    };
+    Plotly.newPlot('myDiv', data, layout);
 	</script>
 	<script src="{{ url_for('static', filename='js/main.js') }}"></script>
   </body>
