--- a/templates/index.html
+++ b/templates/index.html
@@ -1,76 +1,15 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}" />
-	  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" />
-    <script src="https://cdn.tailwindcss.com"></script>
-    <script src="https://cdn.plot.ly/plotly-2.27.0.min.js"></script>
-  </head>
-  <body>
-    <div class="min-h-full">
-      <nav class="bg-zinc-700">
-        <div class="mx-auto max-w-7xl md:px-6 lg:px-8">
-          <div class="flex flex-col md:flex-row items-center justify-between">
-			<div class="flex justify-end md:hidden w-full py-4">
-				<button 
-					type="button" 
-					class="inline-flex items-center justify-center mr-4 rounded-md bg-gray-800 p-2 text-gray-400 hover:bg-gray-700 hover:text-white focus:outline-none focus:ring-2 focus:ring-zinc-400"
-					onclick="toggleMenu()"
-				>
-				  <i class="fa-solid fa-bars"></i>
-				</button>
-			</div>
-			<div id="menu" class="md:block flex flex-col items-center justify-center md:flex-row md:justify-start  md:space-x-4 pb-4 md:py-4 w-full">
-				<a href="/" class="{{ 'bg-zinc-500' if request.path == '/' }} text-white text-center md:rounded-md w-full md:w-fit md:px-3 py-2 text-md font-medium focus:ring-2 focus:ring-slate-300">氣溫</a>
-				<a href="/rainfall" class="{{ 'bg-zinc-500' if request.path == '/rainfall' }} text-white text-center hover:bg-zinc-400 md:rounded-md w-full md:w-fit md:px-3 py-2 text-md font-medium focus:ring-2 focus:ring-slate-300">雨量</a>
-				<a href="#" class="text-white text-center hover:bg-zinc-400 md:rounded-md w-full md:w-fit md:px-3 py-2 text-md font-medium focus:ring-2 focus:ring-slate-300">風速</a>
-			</div>
-          </div>
-        </div>
-      </nav>
-      <main>
-        <div class="mx-auto max-w-7xl py-6 sm:px-6 lg:px-8">
-          <div id="myDiv"></div>
-        </div>
-      </main>
-    </div>
-	<script>
-    const unpack = (rows, key) => {
-      return rows.map(function (row) {
-          return row[key]
-      })
-    }
+{% extends 'layout.html' %}
 
-		const toggleMenu = () => {
-			const menu = document.getElementById('menu')
-			menu.classList.toggle('hidden')
-		}
+{% block content %}
+<div id="myDiv"></div>
+{% endblock %}
 
-    const trace_data_json = '{{ trace_data | tojson | safe }}';
-    const trace_data = JSON.parse(trace_data_json.slice(1,-1))
-    console.log(trace_data)
-    const data = [{
-      type: "choroplethmapbox", 
-      name: "Taiwan", 
-      geojson: "{{ url_for('static', filename='counties.json') }}", 
-      locations: unpack(trace_data, 'location'),
-      z: unpack(trace_data, 'z')
-    }]
-    const layout = {
-      mapbox: {
-        style: "white-bg", 
-        center: {lon: 120.9738819, lat: 23.97565}, 
-        zoom: 5.7
-      }, 
-      width: 600, 
-      height: 400, 
-      margin: {t: 0, b: 0}
-    };
-    Plotly.newPlot('myDiv', data, layout)
-	</script>
-	<script src="{{ url_for('static', filename='js/main.js') }}"></script>
-  </body>
-</html>
+{% block script %}
+<script src="{{ url_for('static', filename='js/chart.js') }}"></script>
+<script>
+  const chart_data_json = '{{ chart_data | tojson | safe }}';
+  const chart_data = JSON.parse(chart_data_json.slice(1,-1))
+
+  choropleth(chart_data, 'myDiv')
+</script>
+{% endblock %}
