--- a/templates/layout.html
+++ b/templates/layout.html
@@ -11,11 +11,12 @@
     <script src="https://cdn.plot.ly/plotly-2.27.0.min.js"></script>
     {% endblock %}
   </head>
-  <body>
+  <body class="bg-zinc-600">
     <div class="min-h-full">
       {% include 'header.html' %}
       <main>
-        <div class="mx-auto max-w-7xl py-6 sm:px-6 lg:px-8">
+        <div class="mx-auto max-w-7xl py-12 sm:px-6 lg:px-8">
+          <h1 class="text-3xl text-white mb-8">{% block title %}Title{% endblock %}</h1>
           {% block content %}{% endblock %}
         </div>
       </main>
