--- a/templates/county.html
+++ b/templates/county.html
@@ -1,20 +1,23 @@
 {% extends 'layout.html' %}
 
 {% block title %}
-{{ location }}
+  {{ location }}
 {% endblock %}
 
 {% block content %}
-<div class="p-2 bg-white rounded-md w-fit">
-    <div id="chart" class="max-w-[600px]"></div>
-</div>
+  {% with location=location, counties=counties %}
+    {% include 'dropdown.html' %}
+  {% endwith %}
+  <div class="p-2 bg-white rounded-md w-fit">
+      <div id="chart" class="max-w-[600px]"></div>
+  </div>
 {% endblock %}
 
 {% block script %}
-<script src="{{ url_for('static', filename='js/chart.js') }}"></script>
-<script>
-  const temp_forecast_data_json = '{{ temperature_forecast_data | tojson | safe }}'
-  const temp_forecast_data = JSON.parse(temp_forecast_data_json.slice(1,-1))
-  temperature_forecast_scatter(temp_forecast_data, 'chart')
-</script>
+  <script src="{{ url_for('static', filename='js/chart.js') }}"></script>
+  <script>
+    const temp_forecast_data_json = '{{ temperature_forecast_data | tojson | safe }}'
+    const temp_forecast_data = JSON.parse(temp_forecast_data_json.slice(1,-1))
+    temperature_forecast_scatter(temp_forecast_data, 'chart')
+  </script>
 {% endblock %}
