--- a/templates/dropdown.html
+++ b/templates/dropdown.html
@@ -9,14 +9,13 @@
     id="dropdownButton"
     class="text-white bg-cyan-600 hover:bg-cyan-700 font-medium rounded-md text-md px-5 py-2.5 text-center inline-flex items-center"
     type="button"
-    onclick="toggleDropdownButton()"
   >
     {{ location }}
     <i class="fa-solid fa-chevron-down ml-2 text-sm"></i>
   </button>
 
   <div
-    id="dropdownList"
+    id="dropdownMenu"
     class="absolute hidden z-10 bg-white rounded-lg shadow w-60 dark:bg-gray-700 "
   >
     <div class="p-3">
@@ -26,13 +25,13 @@
         </div>
         <input
           type="text"
-          id="input-group-search"
+          id="dropdownSearch"
           class="block w-full p-2 ps-10 text-sm text-gray-900 border border-gray-300 rounded-lg bg-gray-50 focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-600 dark:border-gray-500 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
           placeholder="Search county"
         />
       </div>
     </div>
-    <ul class="px-3 pb-3 h-48 overflow-y-auto text-sm text-white">
+    <ul id="dropdownList" class="px-3 pb-3 h-48 overflow-y-auto text-sm text-white">
       {% for county in counties %}
         {{ dropdownMenuItem(county) }}
       {% endfor %}
