--- a/templates/rainfall.html
+++ b/templates/rainfall.html
@@ -6,16 +6,20 @@
 
 {% block content %}
 <div class="p-2 bg-white rounded-md w-fit">
-    <div id="chart" class="max-w-[600px]"></div>
+  <div class="charts-container">
+    <div id="choropleth-chart" class="chart-item"></div>
+    <div id="histogram-chart" class="chart-item"></div>
+  </div>
 </div>
 {% endblock %}
 
 {% block script %}
 <script src="{{ url_for('static', filename='js/chart.js') }}"></script>
 <script>
-  const chart_data_json = '{{ chart_data | tojson | safe }}'
-  const chart_data = JSON.parse(chart_data_json.slice(1,-1))
+  const chart_data_json = '{{ chart_data | tojson | safe }}';
+  const chart_data = JSON.parse(chart_data_json.slice(1,-1));
 
-  choropleth(chart_data, 'chart')
+  choropleth(chart_data, 'choropleth-chart');
+  createHistogram(chart_data, 'histogram-chart');
 </script>
 {% endblock %}
