--- a/templates/header.html
+++ b/templates/header.html
@@ -1,5 +1,7 @@
 {% macro menuItem(url, label) %}
-  <a href="{{ url }}" class="{{ 'bg-zinc-500' if request.path == url }} text-white text-center hover:bg-zinc-400 md:rounded-md w-full md:w-fit md:px-3 py-2 text-lg font-medium focus:ring-2 focus:ring-slate-300">{{ label }}</a>
+  {% set path_parts = request.path.split('/') %}
+  {% set url_parts = url.split('/') %}
+  <a href="{{ url }}" class="{{ 'bg-zinc-500' if path_parts[1] == url_parts[1] }} text-white text-center hover:bg-zinc-400 md:rounded-md w-full md:w-fit md:px-3 py-2 text-lg font-medium focus:ring-2 focus:ring-slate-300">{{ label }}</a>
 {% endmacro %}
 
 <nav class="bg-zinc-700">
@@ -16,8 +18,9 @@
       </div>
       <div id="menu" class="hidden md:flex flex-col items-center justify-center md:flex-row md:justify-start  md:space-x-4 pb-4 md:py-4 w-full">
         {{ menuItem('/temperature', '氣溫') }}
-        {{ menuItem('/rainfall', '雨量') }}
+        {{ menuItem('/rainfall/Now', '雨量') }}
         {{ menuItem('#', '風速') }}
+        {{ menuItem('/county/臺北市', '縣市') }}
       </div>
     </div>
   </div>
