--- a/templates/rainfall.html
+++ b/templates/rainfall.html
@@ -4,24 +4,31 @@
 各縣市平均降雨量
 {% endblock %}
 
+{% block dropdown %}
+  {% with button_text=time_range, item_list=time_range_list, base_url=base_url %}
+    {% include 'dropdown.html' %}
+  {% endwith %}
+{% endblock %}
+
 {% block content %}
-<div class="flex flex-col items-baseline lg:flex-row space-y-8 lg:space-x-8">
-  <div class="p-2 bg-white rounded-md w-fit">
-    <div id="choropleth-chart"></div>
+  <div class="flex flex-col items-baseline lg:flex-row space-y-8 lg:space-x-8">
+    <div class="p-2 bg-white rounded-md w-fit">
+      <div id="choropleth-chart"></div>
+    </div>
+    <div class="p-2 bg-white rounded-md w-fit">
+      <div id="histogram-chart"></div>
+    </div>
   </div>
-  <div class="p-2 bg-white rounded-md w-fit">
-    <div id="histogram-chart"></div>
-  </div>
-</div>
 {% endblock %}
 
 {% block script %}
-<script src="{{ url_for('static', filename='js/chart.js') }}"></script>
-<script>
-  const chart_data_json = '{{ chart_data | tojson | safe }}';
-  const chart_data = JSON.parse(chart_data_json.slice(1,-1));
+  <script src="{{ url_for('static', filename='js/chart.js') }}"></script>
+  <script src="{{ url_for('static', filename='js/dropdown.js') }}"></script>
+  <script>
+    const chart_data_json = '{{ chart_data | tojson | safe }}';
+    const chart_data = JSON.parse(chart_data_json.slice(1,-1));
 
-  choropleth(chart_data, 'choropleth-chart');
-  createHistogram(chart_data, 'histogram-chart', '雨量');
-</script>
+    choropleth(chart_data, 'choropleth-chart', "{{ url_for('static', filename='counties.json') }}");
+    createHistogram(chart_data, 'histogram-chart', '雨量');
+  </script>
 {% endblock %}
