let the text visible

--- a/templates/dropdown.html
+++ b/templates/dropdown.html
@@ -31,7 +31,7 @@
         />
       </div>
     </div>
-    <ul id="dropdownList" class="px-3 pb-3 h-48 overflow-y-auto text-sm text-white">
+    <ul id="dropdownList" class="px-3 pb-3 h-48 overflow-y-auto text-sm text-black">
       {% for item in item_list %}
         {{ dropdownMenuItem(base_url, item) }}
       {% endfor %}
