--- a/templates/dropdown.html
+++ b/templates/dropdown.html
@@ -7,7 +7,7 @@
 <div class="relative my-2">
   <button
     id="dropdownButton"
-    class="text-white bg-cyan-600 hover:bg-cyan-700 font-medium rounded-md text-md px-5 py-2.5 text-center inline-flex items-center"
+    class="text-white bg-cyan-600 hover:bg-cyan-500 font-medium rounded-md text-md px-5 py-2.5 text-center inline-flex items-center"
     type="button"
   >
     {{ button_text }}
@@ -16,7 +16,7 @@
 
   <div
     id="dropdownMenu"
-    class="absolute hidden z-10 bg-white rounded-lg shadow w-60 dark:bg-gray-700 "
+    class="absolute hidden z-10 rounded-lg shadow w-60 bg-gray-700 "
   >
     <div class="p-3">
       <div class="relative">
@@ -26,7 +26,7 @@
         <input
           type="text"
           id="dropdownSearch"
-          class="block w-full p-2 ps-10 text-sm text-gray-900 border border-gray-300 rounded-lg bg-gray-50 focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-600 dark:border-gray-500 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+          class="block w-full p-2 ps-10 text-sm text-gray-900 border rounded-lg bg-gray-600 border-gray-500 placeholder-gray-400"
           placeholder="Search county"
         />
       </div>
