add: windspeed page and information for county

--- a/templates/header.html
+++ b/templates/header.html
@@ -19,7 +19,7 @@
       <div id="menu" class="hidden md:flex flex-col items-center justify-center md:flex-row md:justify-start  md:space-x-4 pb-4 md:py-4 w-full">
         {{ menuItem('/temperature', '氣溫') }}
         {{ menuItem('/rainfall/Now', '雨量') }}
-        {{ menuItem('#', '風速') }}
+        {{ menuItem('/windspeed', '風速') }}
         {{ menuItem('/county/臺北市', '縣市') }}
       </div>
     </div>
