--- a/templates/county.html
+++ b/templates/county.html
@@ -11,9 +11,14 @@
 {% endblock %}
 
 {% block content %}
+<div class="flex flex-col space-y-8 lg:flex-row lg:space-x-8">
   <div class="p-2 bg-white rounded-md w-fit">
-      <div id="chart" class="max-w-[600px]"></div>
+    <div id="chart" class="max-w-[500px]"></div>
   </div>
+  <div class="p-2 bg-white rounded-md w-fit">
+    <div id="fart" class="max-w-[500px]"></div>
+  </div>
+</div>
 {% endblock %}
 
 {% block script %}
@@ -22,6 +27,9 @@
   <script>
     const temp_forecast_data_json = '{{ temperature_forecast_data | tojson | safe }}'
     const temp_forecast_data = JSON.parse(temp_forecast_data_json.slice(1,-1))
+    const county_information_data_json = '{{ county_information_data | tojson | safe }}'
+    const county_information_data= JSON.parse(county_information_data_json.slice(1,-1))
     temperature_forecast_scatter(temp_forecast_data, 'chart')
+    information_table(county_information_data ,'fart')
   </script>
 {% endblock %}
