--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,28 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    {% block head %}
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Data Visualization Final</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}" />
-	  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" />
-    <script src="https://cdn.tailwindcss.com"></script>
-    <script src="https://cdn.plot.ly/plotly-2.27.0.min.js"></script>
-    {% endblock %}
-  </head>
-  <body class="bg-zinc-600">
-    <div class="min-h-full">
-      {% include 'header.html' %}
-      <main>
-        <div class="mx-auto max-w-7xl py-12 sm:px-6 lg:px-8">
-          <h1 class="text-3xl text-white mb-8">{% block title %}Title{% endblock %}</h1>
-          {% block content %}{% endblock %}
-        </div>
-      </main>
-    </div>
-  <script src="{{ url_for('static', filename='js/utils.js') }}"></script>
-  <script src="{{ url_for('static', filename='js/main.js') }}"></script>
-  {% block script %}{% endblock %}
-  </body>
+
+<head>
+  {% block head %}
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Data Visualization Final</title>
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" />
+  <script src="https://cdn.tailwindcss.com"></script>
+  <script src="https://cdn.plot.ly/plotly-2.27.0.min.js"></script>
+  {% endblock %}
+</head>
+
+<body class="bg-zinc-600">
+	<div class="min-h-full">
+		{% include 'sidebar.html' %}
+
+		<main class="ml-40 h-screen">
+			{% block content %}{% endblock %}
+		</main>
+
+	</div>
+	<script src="{{ url_for('static', filename='js/utils.js') }}"></script>
+	<script src="{{ url_for('static', filename='js/main.js') }}"></script>
+	{% block script %}{% endblock %}
+</body>
+
 </html>
